Revert "Fix random scrollbar issue"
This reverts commit 88daac64bae26c9b4a705ba6e8c2de4a1dc0dc39.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -66,11 +66,7 @@ a:link {
 .thumb {
   width: 200px;
   height: 200px;
-  scrollbar-width: none;
-}
-
-.thumb::-webkit-scrollbar {
-  display: none;
+  overflow-y: scroll;
 }
 
 @media only screen and (max-width : 600px) {
@@ -89,10 +85,6 @@ a:link {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.thumb-with-text {
-  overflow-y: scroll;
 }
 
 .thumb-with-text * {
